RESOLVED FIXED312823
AX: AXLiveRegionManager::buildLiveRegionSnapshot can hang when iterating giant live regions
https://bugs.webkit.org/show_bug.cgi?id=312823
Summary AX: AXLiveRegionManager::buildLiveRegionSnapshot can hang when iterating gian...
Tyler Wilcock
Reported 2026-04-20 15:12:25 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-20 15:12:31 PDT
Tyler Wilcock
Comment 2 2026-04-20 15:12:59 PDT
Tyler Wilcock
Comment 3 2026-04-20 15:16:30 PDT
EWS
Comment 4 2026-04-22 08:08:02 PDT
Committed 311773@main (4a5a2da864a3): <https://commits.webkit.org/311773@main> Reviewed commits have been landed. Closing PR #63164 and removing active labels.
EWS
Comment 5 2026-05-04 23:28:42 PDT
Committed 305877.466@webkitglib/2.52 (c03ce1b850ef): <https://commits.webkit.org/305877.466@webkitglib/2.52> Reviewed commits have been landed. Closing PR #64161 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.