AX: AXLiveRegionManager::buildLiveRegionSnapshot can hang when iterating giant live regions https://bugs.webkit.org/show_bug.cgi?id=312823 rdar://175190959

Reviewed by Joshua Hoffman.

Web developers can pack arbitrary amounts of content into a live region, causing
buildLiveRegionSnapshot to walk an unbounded accessibility tree and hang the web
content process. Add a shared counter (maximumSnapshotObjects = 512) that caps the
total objects visited across both the main buildObjectList walk and the collectDescendants
walk for atomic regions.

* Source/WebCore/accessibility/AXLiveRegionManager.cpp:
(WebCore::AXLiveRegionManager::buildLiveRegionSnapshot const):

Canonical link: https://commits.webkit.org/311773@main